--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2 style="text-align: center;">hello i am karam</h2>
+    <h2 style="text-align: center;">hello i am majd</h2>
     <h2 style="text-align: center;">hello i am heba </h2>
 </body>
 </html>
